package com.example.car2;

public class ChatItem {
    public String chatId;
    public String otherUserId;
    public String otherUserName;
    public String otherUserImage;

    public ChatItem() {}
}
